# smartkal

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRD.md  SmartKal-Flow-Hebrew.md  docker-compose.yml  package-lock.json  playwright.config.ts  progress.txt  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_list_item_dedup.py  0003_drop_product_category_id.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  auth.py  category.py  dashboard.py  list.py  price.py  receipt.py
backend/app/core/: errors.py  exception_handlers.py  logging.py  middleware.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  base.py  category.py  list_item.py  list_item_alias.py  list_item_merge_log.py  price_history.py  product.py  receipt.py  user.py  user_product_preference.py
backend/app/services/: basket_comparator.py  canonicalizer.py  categorizer.py  item_merger.py  price_comparator.py  product_matcher.py  receipt_parser.py  refresh_engine.py
backend/app/utils/: pdf.py
backend/tests/: test_auth.py  test_canonicalizer.py  test_category.py  test_config.py  test_dashboard.py  test_errors.py  test_health.py  test_item_merger.py  test_list.py  test_pdf.py  test_price.py  test_price_comparator.py  test_product_matcher.py  test_rate_limit.py  test_receipt.py  test_receipt_parser.py  test_refresh.py
e2e/: auth.spec.ts  receipts.spec.ts  shopping-list.spec.ts
(+47 files in other folders)
